<resources>
    <string name="app_name">Usuarios</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="error_invalid_email">Correo electrónico no válido</string>
    <string name="error_invalid_password">La clave es demasiado corta</string>
    <string name="error_incorrect_password">La clave es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Permisos de contactos son requeridos para validar el correo."
    </string>
    <string name="registrar_login">Registrar</string>
    <string name="title_activity_registro_usuarios">RegistroUsuariosActivity</string>
    <string name="correo_registro">Correo electrónico</string>
    <string name="clave_registro">Contraseña</string>
    <string name="nombre_registro">Nombre(s)</string>
    <string name="apellido_registro">Apellido</string>
    <string name="registro_usuario">Registro Usuario</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="listado_usuarios">Listado</string>
</resources>
